# axv-gw

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  FOR_WOJTEK.md  PROJECT_COMPLETE.md  PR_SUMMARY.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.lock.txt  requirements.txt  test-coverage.txt  test_gateway.sh
.github/workflows/: ci-k2.yml  ci.yml  test.yml
app/: __init__.py  config.py  main.py  main.py.BAK.1762999970  main.py.bak.1763000730  main.py.bak.1763001521  main.py.bak.1763004552  main.py.bak.1763011141  main.py.bak.1763011738  main.py.bak.1763011972  metrics.py  middleware.py  rate_limit.py  security.py
app/data/: status.stub.json
app/middleware/: __init__.py  rate_limit.py  request_logging.py
app/routers/: front.py  healthz.py  hooks.py  internal.py
app/schemas/: status.py
axv_api/app/: .env.production.local  main.py
axv_gw/: metrics.py
axv_gw/middleware/: hmac_ts.py  hooks_metrics.py  rate_limit.py  size_guard.py
openapi/: front_status.yaml
ops/n8n/: k2_webhook_sign_and_send.json
tests/: test_config.py  test_debug_hmac.py  test_front_status.py  test_healthz.py  test_hmac.py  test_hmac_ts.py  test_rate_limit.py  test_size_guard.py
